--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-Hi
+My name is Nicholas Hoang
+
+I am passionate and driven about cybersecurity and enjoy developing solutions that can positively impact an organization and the people it serves. My goal is to do whatever it takes to best protect the data and people of any organization that I serve.
+
+Some strengths that I bring as a cybersecurity analyst are that I have strong verbal communication, programming knowledge, time management skills and a strong sense of dedication.
+
+Some values that I believe in are protecting individuals and their information, creating an environment of understanding how cybersecurity works and making sure confidential information to a company remains confidential.
+
+I am passionate about cybersecurity because I believe that I have a fresh perspective on how to best protect people from threat actors better than others usually do. I intend to work for any company or entity that has values that I resonate with and when I enter this career I want to be known for my groundbreaking work on how safe I was able to keep the company that I work for.
